--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,30 @@
-<h1>List of Users</h1>
+<br>
+<h1 class="h1">List of Users</h1>
 
+My Follower Count: <%= current_user.followers_count %><br>
+My Following Count: <%= current_user.all_following.count %>
+<br>
+<br>
+<table class="table table-fixed">
+<tr>
+<td>User</td>
+<td>Follow / Unfollow</td>
+</tr>
 <% @users = User.all %>
 <% @users.each do |user| %>
-  <%= user.email %> <%= link_to "Follow", follow_user_path(user) %><br/>
+<% if user.email != current_user.email %>
+<tr>
+<td>
+  <%= link_to user.email, profile_path(user) %> 
+</td>
+<td>
+<% if current_user.following?(user) %>
+<%= link_to "Unfollow", unfollow_user_path(user) %><br/>
+<% else %>
+<%= link_to "Follow", follow_user_path(user) %><br/>
+<% end %>
+</td>
+  <% end %>
 <% end %>
 
-
-
-<%= current_user.followers_count %>
-
- <% flash.each do |key, value| %>
-  <%= content_tag :div, value, class: "flash #{key}" %>
-<% end %>
+</table>
