--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,15 +1,18 @@
+<div class="answer" style="background-color:lightblue; height:320px; padding:25px; border-radius:25px;">
 <%= form_for([@question, @question.answers.build]) do |f| %>
   <p>
     <%= f.label :poster %><br>
-    <%= f.text_field :poster, :value => current_user.email, :readonly => true %>
-    
+    <%= f.text_field :poster, :class => "form-control", :value => current_user.email, :readonly => true %>
   </p>
+  <br>
   <p>
-    <%= f.label :contents %><br>
-    <%= f.text_area :contents %>
+    <%= f.label :Your_Answer %><br>
+    <%= f.text_area :contents, :class => "form-control" %>
   </p>
+  <br>
   <p>
-    <%= f.submit %>
+    <%= f.submit "Submit Answer", :class => "btn btn-success" %>
   </p>
   <%= f.hidden_field :answeredby, :value => current_user.email %>
 <% end %>
+</div>
