--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,28 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-<!--
-   <div class="field">
-         <%= fields_for# :profile do |profile_form| %>
-      <%= profile_form.label# :first_name %><br>
-      <%= profile_form.text_field# :first_name %>
-   </div>
-   <div class="field">
-      <%= profile_form.label# :last_name %><br>
-      <%= profile_form.text_field# :last_name %>
-   </div>
-  <%# end %>
-  -->
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+<%= render "formlayout", layout: "formlayout" %>
+<div class="main-agileits">
+<h1>Sign up</h1>
+<div class="mainw3-agileinfo">
+ <!-- login form -->
+      <div class="login-form">  
+        <div class="login-agileits-top">    
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
+            <p> <%= f.label :email %> </p>
+            <%= f.text_field :email, autofocus: true %>
+            <p>Password</p>
+            <% if @minimum_password_length %>
+            <p>(<%= @minimum_password_length %> characters minimum)</p>
+            <% end %>
+            <%= f.text_field :password, autocomplete: "off" %>
+            <p><%= f.label :password_confirmation %></p>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+
     </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+ <div class="login-agileits-bottom"> 
+        <h6><%= render "devise/shared/links" %></h6>
+        </div>
