--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <br>
-<h1 class="h1">My Profile</h1>
+<h1 class="h1">User Profile: <%= @user.email %></h1>
 <br>
 <center>
 
@@ -16,15 +16,15 @@
 					<div class="btm-num">
 						<ul>
 							<li>
-								<h4><%= current_user.all_following.count %></h4>
+								<h4><%= @user.all_following.count %></h4>
 								<h5>Following</h5>
 							</li>
 							<li>
-								<h4><%= current_user.followers_count %></h4>
+								<h4><%= @user.followers_count %></h4>
 								<h5>Followers</h5>
 							</li>
 							<li>
-								<h4><%= @answer.count %></h4>
+								<h4><%= @answer1.count %></h4>
 								<h5>Answers</h5>
 							</li>
 						</ul>
@@ -41,10 +41,10 @@
 <table class="table">
 <tr>
 <td>
-My Registered Email:
+Registered Email: 
 </td>
 <td>
-<%= current_user.email %>
+<%= @user.email %>
 </td>
 </tr>
 <tr>
@@ -52,7 +52,7 @@ My Registered Email:
 No of Questions asked: 
 </td>
 <td>
-<%= @question.count %>
+<%= @question1.count %>
 </td>
 </tr>
 <tr>
@@ -60,43 +60,41 @@ No of Questions asked:
 No of Questions Answered: 
 </td>
 <td>
-<%= @answer.count %>
+<%= @answer1.count %>
 </td>
 </tr>
 <br>
 </table>
 </div>
-<div class="col-md-2" style="position:relative; border:thin; overflow:auto; float:left; background-color: #b3f2fd; padding-top:10px; width: 310px;height: 200px;">
+<div class="col-md-2" style="position:relative; float:left; background-color: #b3f2fd; padding-top:10px; width: 310px;height: 200px;">
 Followers:
 <br><br>
-<% @followers.each do |f| %>
+<% @followers1.each do |f| %>
 <%= link_to f.email, profile_path(f) %> 
 <br>
 <% end %>
-</div>
 <br><br><br><br><br><br>
+</div>
 <div class="col-md-2" style="position:relative; border:thin yellow; overflow:auto; float:left; background-color: #b3f2fd; padding-top:10px; width: 310px; height: 185px;">
 Following:
 <br><br>
-<% @following.each do |f| %>
+<% @following1.each do |f| %>
 <%= link_to f.email, profile_path(f) %> 
 <br>
 <% end %>
 </div>
-
 <div class="clearfix"> </div>
-
 <br><br>
 <h3 class="h3">My Questions</h3>
 <br>
-<% @question.each do |q| %>
+<% @question1.each do |q| %>
 Title: <%= link_to q.title, question_path(q) %>
 <br>
 <% end %>
 <br><br>
 <h3 class="h3">My Answers</h3>
 <br>
-<% @answer.each do |a| %>
+<% @answer1.each do |a| %>
 <% @ques = Question.find(a.question_id) %>
 Answered To: <%= link_to @ques.title, question_path(@ques) %>
 <br>
