--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "formlayout", layout: "formlayout" %>
 <div class="main-agileits">
-<h1>Sign up</h1>
+<h1>KyuOverflow Sign up</h1>
 <div class="mainw3-agileinfo">
  <!-- login form -->
       <div class="login-form">  
