--- a/app/views/layouts/formlayout.html.erb
+++ b/app/views/layouts/formlayout.html.erb
@@ -7,10 +7,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>KyuOverflow :: Login</title>
+<title>Quanda :: Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+
 <!-- Custom Theme files -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/font-awesome.css" rel="stylesheet">   <!-- font-awesome icons -->
@@ -23,7 +23,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 </head>
-<body style="background: url(../../assets/1.jpg)repeat 0px 0px;"">
+<body style="background: url(../../assets/1.jpg)repeat 0px 0px;background-size: 1680px 923px;"">
 <% flash.each do |key, value| %>
       <div class="<%= flash_class(:error) %>">
             <%= devise_error_messages! %>
