--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>KyuOverflow</title>
+    <title>QUANDA :: What's your Question?</title>
 
     <!-- Bootstrap Core CSS -->
     <%= stylesheet_link_tag "bootstrap.min.css" %>
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">KyuOverflow</a>
+                <a class="navbar-brand topnav" href="#">Quanda</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,8 +72,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>KyuOverflow</h1>
-                        <h3>Hi, Welcome to KyuOverflow!</h3>
+                        <h1>Quanda</h1>
+                        <h3>Hi, Welcome to Quanda!</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                            
